[package]
name = "glab"
version = "0.0.1"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
description = "GitLab CLI"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.4.0"
glab-api = { path = "../glab-api" }
clap = "2.33.3"
json-gettext = "3.2.10"
toml = "0.5.8"
serde_yaml = "0.8.17"
serde = { version = "1.0.125", features=["derive"]}